Добавили кнопку выхода из приложения

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,5 +33,6 @@
     <string name="triller">Триллер</string>
     <string name="prikluchenie">Приключение</string>
     <string name="add_film">Добавить фильм</string>
+    <string name="drawer_exit">Выйти</string>
 
 </resources>
